--- a/basal006/myContacts.html
+++ b/basal006/myContacts.html
@@ -37,17 +37,7 @@
 
   }
   </script>
-<script>
-  var map;
-  function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: 44.97399, lng: -93.2299172},
-      zoom: 8
-    });
-  }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOxsD0SOOUU9eIQJ2P67c318MQIJ7zAYE&callback=initMap"
-async defer></script>
+
 <div id = "table1">
   <div style="display: inline-block">
     <a href= "myContacts.html" style="color:white;">My Contacts</a>
@@ -64,7 +54,7 @@ async defer></script>
 <div class = "grid-container">
 
 <div id="div1">
-  <table>
+  <table id = "contacts">
     <tr  class = "theTables">
       <th >name</th>
       <th>email</th>
@@ -101,13 +91,57 @@ async defer></script>
     </tr>
   </table>
 </div>
-<div class = "grid-item">
-  <img src="pelo.jpg" id = "display4" class = "displayDefault" alt="aiai">
-  <button onclick="showSlide()">Start</button>
-  <button onclick="stopSlide()">stop</button>
+<script>
+  var map;
+  var table = document.getElementById("contacts");
+  var joeLocation = table.rows[1].cells[2].innerHTML;
+  var andyLocation = table.rows[2].cells[2].innerHTML;
+  var derekLocation = table.rows[3].cells[2].innerHTML;
+
+  var mapList = [joeLocation,andyLocation,derekLocation];
+  console.log(mapList);
+
+
+  var austin = {lat: 44.97, lng: -93.229};
+  function initMap() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 8,
+      center: {lat: -34.397, lng: 150.644}
+    });
+    var geocoder = new google.maps.Geocoder();
+    geocodeAddress(geocoder, map);
+
+  }
+
+  function geocodeAddress(geocoder, resultsMap) {
+    //var address = derekLocation;
+    for (i=0;i<mapList.length;i++){
+      geocoder.geocode({'address': mapList[i]}, function(results, status) {
+        if (status === 'OK') {
+          resultsMap.setCenter(results[0].geometry.location);
+          var marker = new google.maps.Marker({
+            map: resultsMap,
+            position: results[0].geometry.location
+          });
+        } else {
+          alert('Geocode was not successful for the following reason: ' + status);
+        }
+      });
+    }
+
+  }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOxsD0SOOUU9eIQJ2P67c318MQIJ7zAYE&callback=initMap"
+async defer></script>
+  <div class = "grid-item">
+    <img src="pelo.jpg" id = "display4" class = "displayDefault" alt="aiai">
+    <button onclick="showSlide()">Start</button>
+    <button onclick="stopSlide()">stop</button>
+  </div>
 </div>
-<div class = "grid-item" id = "left"></div>
-<div class = "grid-item" id = "map"></div>
+<div class = "grid">
+  <div class = "grid-item" id = "left"></div>
+  <div class = "grid-item1" id = "map"></div>
 
 </div>
 
