--- a/basal006/myContacts.html
+++ b/basal006/myContacts.html
@@ -103,15 +103,55 @@
 
 
   var austin = {lat: 44.97, lng: -93.229};
+  // function initMap() {
+  //   var directionsService = new google.maps.DirectionsService();
+  //   var directionsRenderer = new google.maps.DirectionsRenderer();
+  //
+  //   var map = new google.maps.Map(document.getElementById('map'), {
+  //     zoom: 8,
+  //     center: {lat: 44.97, lng: -93.229}
+  //   });
+  //   var geocoder = new google.maps.Geocoder();
+  //   geocodeAddress(geocoder, map);
+  //
+  // }
   function initMap() {
-    var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 8,
-      center: {lat: -34.397, lng: 150.644}
-    });
-    var geocoder = new google.maps.Geocoder();
-    geocodeAddress(geocoder, map);
+          var directionsRenderer = new google.maps.DirectionsRenderer;
+          var directionsService = new google.maps.DirectionsService;
+          var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 7,
+            center: {lat: 41.85, lng: -87.65}
+          });
+          directionsRenderer.setMap(map);
+          directionsRenderer.setPanel(document.getElementById('right-panel'));
 
-  }
+          var control = document.getElementById('floating-panel');
+          control.style.display = 'block';
+          map.controls[google.maps.ControlPosition.TOP_CENTER].push(control);
+
+          var onChangeHandler = function() {
+            calculateAndDisplayRoute(directionsService, directionsRenderer);
+          };
+          document.getElementById('start').addEventListener('change', onChangeHandler);
+          document.getElementById('end').addEventListener('change', onChangeHandler);
+        }
+
+    function calculateAndDisplayRoute(directionsService, directionsRenderer) {
+      var start = document.getElementById('start').value;
+      var end = document.getElementById('end').value;
+      directionsService.route({
+        origin: start,
+        destination: end,
+        travelMode: 'DRIVING'
+      }, function(response, status) {
+        if (status === 'OK') {
+          directionsRenderer.setDirections(response);
+        } else {
+          window.alert('Directions request failed due to ' + status);
+        }
+      });
+    }
+
 
   function geocodeAddress(geocoder, resultsMap) {
     //var address = derekLocation;
@@ -142,6 +182,40 @@ async defer></script>
 <div class = "grid">
   <div class = "grid-item" id = "left"></div>
   <div class = "grid-item1" id = "map"></div>
+  <div id="floating-panel">
+        <strong>Start:</strong>
+        <select id="start">
+          <option value="chicago, il">Chicago</option>
+          <option value="st louis, mo">St Louis</option>
+          <option value="joplin, mo">Joplin, MO</option>
+          <option value="oklahoma city, ok">Oklahoma City</option>
+          <option value="amarillo, tx">Amarillo</option>
+          <option value="gallup, nm">Gallup, NM</option>
+          <option value="flagstaff, az">Flagstaff, AZ</option>
+          <option value="winona, az">Winona</option>
+          <option value="kingman, az">Kingman</option>
+          <option value="barstow, ca">Barstow</option>
+          <option value="san bernardino, ca">San Bernardino</option>
+          <option value="los angeles, ca">Los Angeles</option>
+        </select>
+        <br>
+        <strong>End:</strong>
+        <select id="end">
+          <option value="chicago, il">Chicago</option>
+          <option value="st louis, mo">St Louis</option>
+          <option value="joplin, mo">Joplin, MO</option>
+          <option value="oklahoma city, ok">Oklahoma City</option>
+          <option value="amarillo, tx">Amarillo</option>
+          <option value="gallup, nm">Gallup, NM</option>
+          <option value="flagstaff, az">Flagstaff, AZ</option>
+          <option value="winona, az">Winona</option>
+          <option value="kingman, az">Kingman</option>
+          <option value="barstow, ca">Barstow</option>
+          <option value="san bernardino, ca">San Bernardino</option>
+          <option value="los angeles, ca">Los Angeles</option>
+        </select>
+      </div>
+      <div id="right-panel"></div>
 
 </div>
 
