--- a/basal006/myContacts.html
+++ b/basal006/myContacts.html
@@ -104,12 +104,18 @@
  var map;
  var service;
  var infowindow;
+ var infoWindow2;
  var markers = [];
+ var currentLatLng;
+ var currentLat;
+ var currentLng;
 
  function initMap() {
 
   var directionsService = new google.maps.DirectionsService();
   var directionsRenderer = new google.maps.DirectionsRenderer();
+  directionsRenderer.setPanel(document.getElementById('left'));
+
    var uOfM = new google.maps.LatLng(44.9783 , -93.2332 );
    infowindow = new google.maps.InfoWindow();
    map = new google.maps.Map(
@@ -117,17 +123,51 @@
 
    var geocoder = new google.maps.Geocoder();
    geocodeAddress(geocoder, map);
-   searchQuery();
+   //searchQuery();
    directionsRenderer.setMap(map);
 
    var onChangeHandler = function() {
-     calculateAndDisplayRoute(directionsService, directionsRenderer);
+     createRoute(directionsService, directionsRenderer);
    };
+   var resetDirection = function() {
+     searchQuery(directionsService, directionsRenderer);
+   };
+   document.getElementById('query').addEventListener('click', resetDirection);
 
   document.getElementById('search').addEventListener('click', onChangeHandler);
+  infoWindow2 = new google.maps.InfoWindow;
+
+  // Try HTML5 geolocation.
+         if (navigator.geolocation) {
+           navigator.geolocation.getCurrentPosition(function(position) {
+             var pos = {
+               lat: position.coords.latitude,
+               lng: position.coords.longitude
+             };
+             currentLat = position.coords.latitude;
+             currentLng = position.coords.longitude;
+              currentLatLng = position.coords.latitude.toString() + ", " + position.coords.longitude.toString() ;
+
+           }, function() {
+             handleLocationError(true, infoWindow2, map.getCenter());
+           });
+         } else {
+           // Browser doesn't support Geolocation
+           handleLocationError(false, infoWindow2, map.getCenter());
+         }
+       }
+ function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+   currentLatLng = "44.9783 , -93.2332"
+   currentLat = 44.9783;
+   currentLng = -93.2332;
  }
 
- function calculateAndDisplayRoute(directionsService, directionsRenderer) {
+
+ function createRoute(directionsService, directionsRenderer) {
+   directionsRenderer.setMap(map);
+
+   clearMarkers();
+  console.log(currentLatLng);
    var travel;
    var ele = document.getElementsByName('mode');
 
@@ -139,7 +179,7 @@
            }
          directionsService.route(
              {
-               origin: {query: "1108 4th se st, minneapolis, mn"},
+               origin: {query: currentLatLng },
                destination: {query: document.getElementById('end').value},
                travelMode: travel
              },
@@ -152,22 +192,28 @@
              });
        }
 
- function searchQuery(){
+ function searchQuery(directionsService, directionsRenderer){
+   directionsRenderer.setMap(null)
     clearMarkers();
      type = document.getElementById("select").value;
      extra = document.getElementById("extra").value;
      radius = document.getElementById("radius").value;
+    console.log(type);
+    console.log(extra);
+    console.log(radius);
+
+
     var request;
     if(extra == null){
       request = {
-          location:  {lat: 44.9783, lng:  -93.2332},
+          location:  {lat: currentLat, lng:  currentLng},
           radius: radius,
           type: type,
 
         };
     } else {
       request = {
-          location:  {lat: 44.9783, lng:  -93.2332},
+          location:  {lat: currentLat, lng:  currentLng},
           radius: radius,
           type: type,
           keyword: extra
@@ -269,7 +315,7 @@ async defer></script>
         <option value="convenience_store">Convenience store</option>
         <option value="stadium">Stadium</option>
       </select>
-      <input type="button" value="Find" onclick="searchQuery()" />
+      <input type="button" id ="query" value="Find" />
     </form>
     <div id = "separator"></div>
     <form id = "directionForm">
