--- a/basal006/MyForm.html
+++ b/basal006/MyForm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en">
+<meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
   <title>Form</title>
   <body>
@@ -14,9 +15,35 @@
         <a href ="myForm.html" style="color:white;">Form Input</a>
       </div>
     </div>
+    <script>
+      function initMap() {
+        var uOfM = new google.maps.LatLng(44.9783 , -93.2332 );
+        infowindow = new google.maps.InfoWindow();
+        map = new google.maps.Map(
+            document.getElementById('map'), {center: uOfM, zoom: 15});
+        var geocoder = new google.maps.Geocoder();
+        google.maps.event.addListener(map, 'click', function(event) {
+        geocoder.geocode({
+          'latLng': event.latLng
+        }, function(results, status) {
+          if (status == google.maps.GeocoderStatus.OK) {
+            if (results[0]) {
+            document.getElementById("address").value =  results[0].formatted_address;
+            }
+          }
+        });
+      });
+      }
 
+
+
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOxsD0SOOUU9eIQJ2P67c318MQIJ7zAYE&libraries=places&callback=initMap"
+    async defer></script>
+      <div id = "formGrid">
     <form action="http://www-users.cselabs.umn.edu/~liux4189/echo.php">
-      <table id = "table2" >
+
+      <table class = "formg" id = "table2" >
         <tr>
           <th>Input Field</th>
           <th>Id</th>
@@ -36,7 +63,15 @@
         <tr>
           <td>Address</td>
           <td>
-              <input type="text" name="address" placeholder="address" required>
+              <input id = "address" type="text" name="address" placeholder="address" required>
+              <script>
+              function init(){
+                var text = new google.maps.places.Autocomplete(document.getElementById("address"));
+                console.log(text);
+              }
+              </script>
+
+
           </td>
         </tr>
         <tr>
@@ -59,5 +94,8 @@
         </tr>
       </table>
     </form>
+  </div>
+    <div class = "formg" id = "map"></div>
+
   </body>
 </html>
