--- a/basal006_hwk04/MyForm.html
+++ b/basal006_hwk04/MyForm.html
@@ -41,7 +41,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOxsD0SOOUU9eIQJ2P67c318MQIJ7zAYE&libraries=places&callback=initMap"
     async defer></script>
       <div id = "formGrid">
-    <form action="http://www-users.cselabs.umn.edu/~liux4189/echo.php">
+    <form action="" method = "post">
 
       <table class = "formg" id = "table2" >
         <tr>
