--- a/basal006_hw06/client/addContact.html
+++ b/basal006_hw06/client/addContact.html
@@ -13,10 +13,10 @@
       <nav class="navbar navbar-default">
           <div class="container-fluid">
               <ul class="nav navbar-nav">
-                  <li><a href="welcome.html"><b>Home</b></a></li>
-                  <li><a href="contact.html"><b>Contact</b></a></li>
-                  <li><a href="addContact.html"><b>Add Contact</b></a></li>
-                  <li><a href="stock.html"><b>Stock Page</b></a></li>
+                  <li><a href="/welcome"><b>Home</b></a></li>
+                  <li><a href="/contact"><b>Contact</b></a></li>
+                  <li><a href="/addContact"><b>Add Contact</b></a></li>
+                  <li><a href="/stock"><b>Stock Page</b></a></li>
               </ul>
           </div>
       </nav><br><br><br>
