--- a/basal006_hw06/client/stock.html
+++ b/basal006_hw06/client/stock.html
@@ -16,6 +16,7 @@
                   <li><a href="/contact"><b>Contact</b></a></li>
                   <li><a href="/addContact"><b>Add Contact</b></a></li>
                   <li><a href="/stock"><b>Stock Page</b></a></li>
+                  <li><a href="/logout"><b>log out</b></a></li>
               </ul>
           </div>
       </nav>
