--- a/hw7/basal006_express/client/contact.html
+++ b/hw7/basal006_express/client/contact.html
@@ -14,6 +14,7 @@
                   <li><a href="/contact"><b>Contact</b></a></li>
                   <li><a href="/addContact"><b>Add Contact</b></a></li>
                   <li><a href="/stock"><b>Stock Page</b></a></li>
+                  <li><a href="/admin"><b>Admin</b></a></li>
                   <li><a href="/logout"><b>log out</b></a></li>
               </ul>
           </div>
