cannot delete logged in user

--- a/hw7/basal006_express/client/admin.html
+++ b/hw7/basal006_express/client/admin.html
@@ -114,7 +114,8 @@
       console.log("function()");
 
       $.get("userLogin").done(function(response) {
-        document.getElementById("userName").innerHTML = "Welcome " + response.login + "!";
+        console.log("Admin: ",response);
+        document.getElementById("userName").innerHTML = "Welcome " + response + "!";
       });
 
 
